Update Problema de la mochila.ipynb

--- a/Problema de la mochila.ipynb
+++ b/Problema de la mochila.ipynb
@@ -40,7 +40,7 @@
     "\\text{max } & \\sum_i u_i x_i \\\\\n",
     "\\text{s.a} & \\\\\n",
     "&\\sum_i v_i x_i \\le V & \\forall i \\in [0,...,n]\\\\\n",
-    "& x_i \\in {0,1} & \\forall i \\in [0,...,n] \\\\\n",
+    "& x_i \\in \{0,1\} & \\forall i \\in [0,...,n] \\\\\n",
     "\\end{align}"
    ]
   },
